--- a/MyApplication/app/src/main/res/layout/activity_main_menu.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main_menu.xml
@@ -9,4 +9,11 @@
     tools:layout_editor_absoluteX="0dp"
     android:background="@color/colorPrimary">
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="129dp"
+        tools:layout_editor_absoluteY="260dp" />
 </android.support.constraint.ConstraintLayout>
