--- a/MyApplication/app/src/main/res/layout/activity_main_menu.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main_menu.xml
@@ -9,7 +9,7 @@
     tools:layout_editor_absoluteX="0dp"
     android:background="@color/colorPrimary">
 
-    <Button
+    <de.selectcode.kinderserienquiz.UI.components.LevelRectangleView
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
