--- a/MyApplication/app/src/main/res/layout/activity_main_menu.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main_menu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,17 +9,25 @@
     tools:layout_editor_absoluteX="0dp"
     android:background="@color/colorPrimary">
 
-    <de.selectcode.kinderserienquiz.UI.components.LevelRectangleView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <de.selectcode.kinderserienquiz.UI.components.LevelRectangleView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <de.selectcode.kinderserienquiz.UI.components.LevelRectangleView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <de.selectcode.kinderserienquiz.UI.components.LevelRectangleView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <de.selectcode.kinderserienquiz.UI.components.LevelRectangleView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <de.selectcode.kinderserienquiz.UI.components.LevelRectangleView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <de.selectcode.kinderserienquiz.UI.components.LevelRectangleView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <de.selectcode.kinderserienquiz.UI.components.LevelRectangleView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+
+    </LinearLayout>
+
+</android.support.constraint.ConstraintLayout>
