--- a/MyApplication/app/src/main/res/layout/activity_level_menu.xml
+++ b/MyApplication/app/src/main/res/layout/activity_level_menu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,8 +8,9 @@
     tools:context="de.selectcode.kinderserienquiz.UI.levelMenu"
     tools:layout_editor_absoluteY="81dp"
     tools:layout_editor_absoluteX="0dp"
-    android:background="@color/colorPrimary">
+    android:background="@color/colorPrimary"
+    android:orientation="vertical">
 
 
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
