--- a/MyApplication/app/src/main/res/layout/activity_level_menu.xml
+++ b/MyApplication/app/src/main/res/layout/activity_level_menu.xml
@@ -5,12 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="de.selectcode.kinderserienquiz.UI.levelMenu"
+    tools:context="de.selectcode.kinderserienquiz.UI.activities.levelMenu"
     tools:layout_editor_absoluteY="81dp"
     tools:layout_editor_absoluteX="0dp"
-    android:background="@color/colorPrimary"
+    android:background="@color/background"
     android:orientation="vertical">
-
-
-
 </LinearLayout>
